unpackaged/main/default/objects/Product2/fields/MDM_Service_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Other_Names__c</fullName>
    <label>Service Other Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>