unpackaged/main/default/objects/Product2/fields/MDM_Service_SME_AcctMgmt__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_SME_AcctMgmt__c</fullName>
    <label>Service SME AcctMgmt</label>
    <type>TextArea</type>
</CustomField>