unpackaged/main/default/objects/Product2/fields/MDM_Service_SME_Commercial__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_SME_Commercial__c</fullName>
    <label>Service SME Commercial</label>
    <type>TextArea</type>
</CustomField>