unpackaged/main/default/objects/Product2/fields/MDM_Service_SME_EID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_SME_EID__c</fullName>
    <label>Service SME EID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>