unpackaged/main/default/objects/Product2/fields/MDM_Service_SME_Marketing__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_SME_Marketing__c</fullName>
    <label>Service SME Marketing</label>
    <type>TextArea</type>
</CustomField>