unpackaged/main/default/objects/Product2/fields/MDM_Service_SME_Pricing__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_SME_Pricing__c</fullName>
    <label>Service SME Pricing</label>
    <type>TextArea</type>
</CustomField>