unpackaged/main/default/objects/Product2/fields/MDM_Service_SME_Product__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_SME_Product__c</fullName>
    <label>Service SME Product</label>
    <type>TextArea</type>
</CustomField>