unpackaged/main/default/objects/Product2/fields/MDM_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Status__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>