unpackaged/main/default/objects/Product2/fields/MDM_Service_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>MDM_Service_Subcategory__c</fullName>
    <label>Service Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>