unpackaged/main/default/objects/Product2/fields/MDM_ServiceLifecycle_Category__c.field-meta.xml
<CustomField>
    <fullName>MDM_ServiceLifecycle_Category__c</fullName>
    <label>Service Lifecycle Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>