unpackaged/main/default/objects/Product2/fields/MDM_ServiceSMELegal__c.field-meta.xml
<CustomField>
    <fullName>MDM_ServiceSMELegal__c</fullName>
    <label>Service SME Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>