unpackaged/main/default/objects/Product2/fields/MDM_Show_on_Contract__c.field-meta.xml
<CustomField>
    <fullName>MDM_Show_on_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Contract</label>
    <type>Checkbox</type>
</CustomField>