unpackaged/main/default/objects/Product2/fields/MDM_Show_On_FeeSheet__c.field-meta.xml
<CustomField>
    <fullName>MDM_Show_On_FeeSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On FeeSheet</label>
    <type>Checkbox</type>
</CustomField>