unpackaged/main/default/objects/Product2/fields/MDM_Standard_Fee_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Standard_Fee_Name__c</fullName>
    <label>MDM Standard Fee Name</label>
    <type>TextArea</type>
</CustomField>