unpackaged/main/default/objects/Product2/fields/MDM_Strategy_Notes__c.field-meta.xml
<CustomField>
    <fullName>MDM_Strategy_Notes__c</fullName>
    <label>Strategy Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>