unpackaged/main/default/objects/Product2/fields/MDM_WebLink__c.field-meta.xml
<CustomField>
    <fullName>MDM_WebLink__c</fullName>
    <label>WebLink</label>
    <type>Url</type>
</CustomField>