unpackaged/main/default/objects/Product2/fields/ProductAvailability__c.field-meta.xml
<CustomField>
    <fullName>ProductAvailability__c</fullName>
    <label>Product Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal Only</fullName>
            </value>
            <value>
                <fullName>Enable New to Therapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>